--- a/TP3/appsettings.json
+++ b/TP3/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConection": "Data Source=tp3.db"
+    "DefaultConnection": "Data Source=./Database/tp3.db"
   }
 }
