--- a/ChronoLink/appsettings.json
+++ b/ChronoLink/appsettings.json
@@ -12,10 +12,10 @@
   "JwtSettings": {
     "Issuer": "ChronoLink",
     "Audience": "ChronoLinkUsers",
-    "SecretKey": "HedhaHouaProjetElDotnetMadame",
-    "ExpiryInMinutes": 60
+    "SecretKey": "HedhaHouaProjetElDotnetMadameYenjahHakkaWalle",
+    "ExpiryInMinutes": 120
   },
   "Gemini": {
-    "ApiKey": "account-xxxx"
+    "ApiKey": "AIzaSyB5Aj5fVrBA1lcpy0XT2p66yuuQFxu93r4"
   }
 }
